--- a/public/html/index.html
+++ b/public/html/index.html
@@ -55,12 +55,26 @@
               Tinder Messenger
             </h1>
             <h2 class="subtitle">
-              Tindering in public is never a good idea. Get your tinder messages over SMS and chat wherever!
+              Tindering in public is never a good idea. Get your tinder messages over SMS and talk whenever you want!
             </h2>
             <div class="box">
+              <figure class="avatar">
+                <img src="../images/facebook-icon.png">
+              </figure>
+              <form>
+                <div class="control">
+                  <input class="input" type="text" placeholder="Facebook Username">
+                  <input class="input" type="text" placeholder="Facebook Password">
+                  <input class="input" type="text" placeholder="Phone Number">
+                  <a class="button is-block is-info is-large">Create Account</a>
+                </div>
+              </form>
+            </div>
+            <!--<div class="box">
               <div class="field is-grouped">
                 <p class="control is-expanded">
-                  <input class="input" type="text" placeholder="Enter your email">
+                  <input class="input" type="text" placeholder="Enter your Facebook username">
+                  <input class="input" type="text" placeholder="Enter your Facebook password">
                 </p>
                 <p class="control">
                   <a class="button is-info">
@@ -68,7 +82,7 @@
                   </a>
                 </p>
               </div>
-            </div>
+            </div>-->
           </div>
         </div>
       </div>
