--- a/public/html/index.html
+++ b/public/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Landing - Free Bulma template</title>
+    <title>Tinder Messenger - Tinder over SMS</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
     <!-- Bulma Version 0.6.0 -->
@@ -17,8 +17,9 @@
         <nav class="navbar">
           <div class="container">
             <div class="navbar-brand">
-              <a class="navbar-item" href="../">
-                <img src="http://bulma.io/images/bulma-type-white.png" alt="Logo">
+              <a class="navbar-item" href="./index.html">
+                <img src="../images/logo.png" alt="Logo">
+                <!--<img src="http://bulma.io/images/bulma-type-white.png" alt="Logo">-->
               </a>
               <span class="navbar-burger burger" data-target="navbarMenu">
                 <span></span>
