--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -28,20 +28,12 @@
             </div>
             <div id="navbarMenu" class="navbar-menu">
               <div class="navbar-end">
-                <a class="navbar-item is-active">
+                <a class="navbar-item" href="./index.html">
                   Home
                 </a>
-                <a class="navbar-item" href="./contact.html">
+                <a class="navbar-item is-active" href="./contact.html">
                   Contact
                 </a>
-                <!--<span class="navbar-item">
-                  <a class="button is-white is-outlined is-small" href="https://github.com/dansup/bulma-templates/blob/master/templates/landing.html">
-                    <span class="icon">
-                      <i class="fa fa-github"></i>
-                    </span>
-                    <span>View Source</span>
-                  </a>
-                </span>-->
               </div>
             </div>
           </div>
@@ -52,37 +44,11 @@
         <div class="container has-text-centered">
           <div class="column is-6 is-offset-3">
             <h1 class="title">
-              Tinder Messenger
+              Contact Us
             </h1>
             <h2 class="subtitle">
-              Tindering in public is never a good idea. Get your tinder messages over SMS and talk whenever you want!
+              Questions? Contact us at tinder.messenger@gmail.com
             </h2>
-            <div class="box">
-              <figure class="avatar">
-                <img src="../images/facebook-icon.png">
-              </figure>
-              <form>
-                <div class="control">
-                  <input class="input" type="text" placeholder="Facebook Username">
-                  <input class="input" type="text" placeholder="Facebook Password">
-                  <input class="input" type="text" placeholder="Phone Number">
-                  <a class="button is-block is-info is-large">Create Account</a>
-                </div>
-              </form>
-            </div>
-            <!--<div class="box">
-              <div class="field is-grouped">
-                <p class="control is-expanded">
-                  <input class="input" type="text" placeholder="Enter your Facebook username">
-                  <input class="input" type="text" placeholder="Enter your Facebook password">
-                </p>
-                <p class="control">
-                  <a class="button is-info">
-                    Notify Me
-                  </a>
-                </p>
-              </div>
-            </div>-->
           </div>
         </div>
       </div>
