--- a/public/index.html
+++ b/public/index.html
@@ -48,17 +48,17 @@
               Tinder Messenger
             </h1>
             <h2 class="subtitle">
-              Tindering in public is never a good idea. Get your tinder messages over SMS and talk whenever you want!
+              Tindering in public is never a good idea. Send and receive Tinder messages over text, so you can chat whenever.
             </h2>
             <div class="box">
               <figure class="avatar">
                 <img src="../images/facebook-icon.png">
               </figure>
-              <form id="target">
+              <form id="create-account">
                 <div class="control">
-                  <input class="input" type="text" placeholder="Facebook Username">
-                  <input class="input" type="password" placeholder="Facebook Password">
-                  <input class="input" type="text" placeholder="Phone Number">
+                  <input id="facebookUsername" class="input" type="text" placeholder="Facebook Username">
+                  <input id="facebookPassword" class="input" type="password" placeholder="Facebook Password">
+                  <input id="phoneNumber" class="input" type="text" placeholder="Phone Number">
                   <button type="submit" class="button is-link is-block is-large is-fullwidth">Create Account</button>
                 </div>
               </form>
