frontend css for invalid creds

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
                 </div>
                 <div class="control">
                   <input id="facebookPassword" class="input" type="password" placeholder="Facebook Password">
-                  <p id="bad-credentials" class="is-danger">Facebook Credentials are Invalid</p>
+                  <p id="bad-credentials" class="help is-danger is-hidden">Facebook Credentials are Invalid</p>
                 </div>
                 <div class="control">
                   <input id="phoneNumber" class="input" type="text" placeholder="Phone Number">
