--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
               </figure>
               <form id="create-account">
                 <div class="control">
-                  <input id="facebookUsername" class="input" type="text" placeholder="Facebook Username">
+                  <input id="facebookUsername" class="input" type="email" placeholder="Facebook Username">
                 </div>
                 <div class="control">
                   <input id="facebookPassword" class="input" type="password" placeholder="Facebook Password">
